--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,30 @@
-main {
-  width: calc(100vw - 100px);
-  height: 100vh;
+/* main {
+  width: 100%;
+  height: calc(100vh - 100px);
   background-color: red;
+} */
+
+footer {
+  width: 100%;
+  height: 100px;
+  background-color: blue;
 }
 
 aside {
   width: 100px;
-  height: 100vh;
-  background-color: blue;
+  height: calc(100vh - 100px);
+  background-color: green;
 }
+
+section {
+  width: calc(100vw - 100px);
+  height: calc(100vh - 100px);
+  background-color: yellow;
+}
+
+header {
+  width: 100%;
+  height: 100px;
+  background-color: pink;
+}
+
