--- a/css/style.css
+++ b/css/style.css
@@ -20,11 +20,14 @@ section {
   width: calc(100vw - 100px);
   height: calc(100vh - 100px);
   background-color: yellow;
+  overflow-y: auto;
+
 }
 
 header {
   width: 100%;
   height: 100px;
-  background-color: pink;
+  background-color: rgba(255, 0, 0, .3);
+  position: fixed;
 }
 
