--- a/css/style.css
+++ b/css/style.css
@@ -28,10 +28,16 @@ section div {
   height: 100px;
 }
 
-header {
+banner {
   width: 100%;
   height: 100px;
   background-color: rgba(255, 0, 0, .3);
   position: fixed;
+}
+
+header {
+  width: 100%;
+  height: 50px;
+  background-color: pink;
 }
 
