--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,4 @@
-/* main {
-  width: 100%;
-  height: calc(100vh - 100px);
-  background-color: red;
-} */
+/* FOOTER */
 
 footer {
   width: 100%;
@@ -10,11 +6,15 @@ footer {
   background-color: blue;
 }
 
+/* ASIDE */
+
 aside {
   width: 100px;
   height: calc(100vh - 100px);
   background-color: green;
 }
+
+/* SECTION */
 
 section {
   width: calc(100vw - 100px);
@@ -28,12 +28,21 @@ section div {
   height: 100px;
 }
 
+section img {
+  transform: scale(.5);
+  margin: -50px;
+}
+
+/* BANNER */
+
 banner {
   width: 100%;
   height: 100px;
   background-color: rgba(255, 0, 0, .3);
   position: fixed;
 }
+
+/* HEADER */
 
 header {
   width: 100%;
