--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 footer {
   width: 100%;
   height: 100px;
-  background-color: blue;
+  background-color: #282828;
 }
 
 /* ASIDE */
@@ -11,7 +11,7 @@ footer {
 aside {
   width: 100px;
   height: calc(100vh - 100px);
-  background-color: green;
+  background-color: #000000;
 }
 
 /* SECTION */
@@ -19,7 +19,7 @@ aside {
 section {
   width: calc(100vw - 100px);
   height: calc(100vh - 100px);
-  background-color: yellow;
+  background-color: #141922;
   overflow-y: auto;
 }
 
@@ -38,7 +38,7 @@ section img {
 banner {
   width: 100%;
   height: 100px;
-  background-color: rgba(255, 0, 0, .3);
+  background-color: #080b12;
   position: fixed;
 }
 
@@ -47,6 +47,6 @@ banner {
 header {
   width: 100%;
   height: 50px;
-  background-color: pink;
+  background-color: #141922;
 }
 
