--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,16 @@ banner {
   position: fixed;
 }
 
+banner button {
+  background-color: #080b12;
+  color: white;
+  padding: 10px 45px;
+  border-radius: 50px;
+  position: absolute; 
+  top: 25px;
+  right: 200px;
+}
+
 /* HEADER */
 
 header {
