--- a/css/style.css
+++ b/css/style.css
@@ -1,42 +1,94 @@
-/* FOOTER */
-
-footer {
-  width: 100%;
-  height: 100px;
-  background-color: #282828;
-}
-
 /* ASIDE */
 
 aside {
-  width: 200px;
+  width: 300px;
   height: calc(100vh - 100px);
   background-color: #000000;
+  padding-left: 20px;
+  overflow-y: auto;
 }
 
 .logo {
   height: 100px;
-  width: 100%;
-  padding: 10px 20px 10px 0px;
 }
 
 .logo img {
-  transform: scale(0.8);
+  height: 100px;
+  width: 150px;
 }
 
-.icon {
-  transform: scale(0.3);
-  margin: -30px -50px;
+aside li img {
+  height: 30px;
+  width: 30px;
+  vertical-align: middle;
+  margin-right: 10px;
 }
 
-li {
-  padding-right: 50px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+aside li {
+  margin-bottom: 10px;
+}
+
+.playlist h5 {
+  color: white;
+  font-weight: bold;
+  margin-top: 30px;
+  margin-bottom: -10px;
+}
+
+.playlist ul li i {
+  width: 40px;
+  height: 40px;
+  color: black;
+  text-align: center;
+  line-height: 40px;
+  vertical-align: middle;
+  margin-right: 10px;
+  background-color: #a3a3a3;
+}
+
+.playlist li {
+  margin: 20px 0;
+}
+
+.aside-bottom {
+  width: 100%;
+  height: 50px;
+}
+
+.aside-bottom i {
+  margin-right: 10px;
+}
+
+.aside-bottom .install {
+  margin-bottom: 10px;
+}
+
+.aside-bottom .profile {
+  margin-top: 15px;
+  margin-bottom: 10px;
+}
+
+.profile i {
+  background-color: #808080;
+  color: white;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  line-height: 30px;
+  text-align: center;
+}
+
+.profile span {
+  color: white; 
+  font-weight: bold;
 }
 
 /* SECTION */
+
+.box {
+  flex-direction: column;
+  align-items: flex-start;
+}
 
 section {
   width: calc(100vw - 100px);
@@ -55,9 +107,9 @@ section img {
   margin: -55px;
 }
 
-section .box {
-  /* padding-left: 10px; */
-}
+/* section .box {
+  padding-left: 10px;
+} */
 
 .cd {
   flex-direction: column;
@@ -98,10 +150,30 @@ header {
 
 header nav ul li {
   display: inline-block;
+  padding-right: 20px;
+  /* display: flex;
+  justify-content: center;
+  align-items: flex-start; */
 }
 
 header nav {
   display: flex;
   justify-content: center;
+  margin-top: 20px;
 }
+
+/* FOOTER */
+
+footer {
+  width: 100%;
+  height: 100px;
+  background-color: #282828;
+}
+
+.footer-left img {
+  height: 90px;
+}
+
+
+
 
