--- a/css/utils.css
+++ b/css/utils.css
@@ -1,7 +1,7 @@
 /* DEBUG */
 
 .debug {
-  background-color: rgba(255, 0, 0, .2);
+  background-color: rgba(240, 13, 13, 0.5);
   border: 1px solid black;
 }
 
