--- a/css/style.css
+++ b/css/style.css
@@ -193,11 +193,43 @@ footer {
   align-items: center;
   padding-top: 15px;
   padding-left: 15px;
+  width: 20%;
 }
 
 .footer-center {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  width: 60%;
+}
+
+.footer-center i {
+  /* width: 80px; */
+  /* height: 80px; */
+  /* background-color: red; */
+  margin-right: 20px;
+}
+
+.footer-center .buttons {
+  height: 50%;
+  padding-top: 20px;
+}
+
+.footer-center .timing {
+  height: 50%;
+  padding-top: 10px;
+}
+
+.footer-center .timing span {
+  margin-right: 15px;
+}
+
+.footer-right {
+  width: 20%;
+  /* background-color: red; */
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
 }
 
 
