--- a/css/style.css
+++ b/css/style.css
@@ -101,6 +101,24 @@ section div {
   padding-left: 20px;
 }
 
+.cd {
+  width: 300px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.cd img {
+  height: 100%;
+}
+
+.row {
+  display: flex;
+  flex-wrap: nowrap;
+  background-color: red;
+  margin-bottom: 30px;
+}
+
 /* BANNER */
 
 banner {
@@ -118,22 +136,6 @@ banner button {
   position: absolute; 
   top: 25px;
   right: 270px;
-}
-
-.cd {
-  width: 300px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.cd img {
-  height: 100%;
-}
-
-.row {
-  display: flex;
-  flex-wrap: nowrap;
 }
 
 /* HEADER */
